feat: OSRM tour optimization algorithm